# pSessMgr

./: .gitignore  NOTES.md  README.md  pyproject.toml  requirements.txt  tags
psm/: class_loader.py  config-old.py  config.py  console.py  enums.py  first_run.py  logger.py  paths.py  psessmgr.py  psm_tests.py  psmdb.py  psmsessiondb.py
psm/commands/: computer_cmd.py  domain.py  domain_cmd.py  generator_cmd.py  project.py  scope_cmd.py  session.py  session_cmd.py
psm/data/: psm.conf
psm/lib/: banner.py  functions.py
psm/loaders/: toolloader.py
psm/models/: computer.py  domain.py  nmapscan.py  nmapscandetail.py  object.py  scope.py
psm/modules/: computer.py  domain.py  generator.py  project.py  scope.py  session.py
psm/scripts/: banner.py
psm/sessiondbmodules/: computer.py  domain.py
psm/tools/: arsenal.py  arsenalng.py  hashcat.py  john.py  jwttool.py  lsassy.py  nxc.py  sqlmap.py  system.py  tplmap copy.py
psm/tools/super/: toolsuper.py
psm/tools/tmp/: sqlmap.py
tests/files/: adidnsdump.csv  boodyad_dnsdump.txt  nmap_fullscan.xml  nmap_ping.xml
