[tool.poetry]
name = "psessmgr"
version = "0.0.1"
description = ""
authors = ["jubeaz <pascal.auillans@gmail.com>"]
readme = "README.md"

packages = [
    { include = "psm"}
]

[tool.poetry.scripts]
psm = 'psm.psessmgr:main'
psessmgr = 'psm.psessmgr:main'
pSessMgr = 'psm.psessmgr:main'

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.1"
typer = "^0.12.3"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
